objects/redwing__Criterion_Task__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Criterion__c</fullName>
        <label>Criterion</label>
        <referenceTo>redwing__Criterion__c</referenceTo>
        <relationshipLabel>Criterion Tasks</relationshipLabel>
        <relationshipName>Criterion_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>redwing__Learning_Activity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning Activity</label>
        <referenceTo>redwing__Training_Activity__c</referenceTo>
        <relationshipLabel>Criterion Tasks</relationshipLabel>
        <relationshipName>Criterion_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <referenceTo>redwing__Learning__c</referenceTo>
        <relationshipLabel>Criterion Tasks</relationshipLabel>
        <relationshipName>Criterion_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Criterion Task</label>
    <nameField>
        <displayFormat>CTN-{0}</displayFormat>
        <label>Criterion Task Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criterion Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>